@@ -2027,19 +2027,19 @@ void Actor::paint
 		    (1L << Obj_flags::poisoned) | (1 << Obj_flags::cursed) |
 		    	(1 << Obj_flags::charmed) | (1 << Obj_flags::paralyzed)))
 			{
-			if (flags & (1L << Obj_flags::poisoned))
-				ShapeID::paint_outline(xoff,yoff,POISON_PIXEL);
-			else if (flags & (1L << Obj_flags::cursed))
-				ShapeID::paint_outline(xoff,yoff,CURSED_PIXEL);
-			else if (flags & (1L << Obj_flags::charmed))
+			if (flags & (1L << Obj_flags::charmed))
 				ShapeID::paint_outline(xoff, yoff,
 								CHARMED_PIXEL);
 			else if (flags & (1L << Obj_flags::paralyzed))
 				ShapeID::paint_outline(xoff, yoff,
 								PARALYZE_PIXEL);
-			else
+			else if (flags & (1L << Obj_flags::protection))
 				ShapeID::paint_outline(xoff, yoff,
 								PROTECT_PIXEL);
+			else if (flags & (1L << Obj_flags::cursed))
+				ShapeID::paint_outline(xoff,yoff,CURSED_PIXEL);
+			else
+				ShapeID::paint_outline(xoff,yoff,POISON_PIXEL);
 			}
 		}
 	}
